button alignmetn issue resolved

--- a/src/components/profile/profile.scss
+++ b/src/components/profile/profile.scss
@@ -168,7 +168,6 @@
         .greenBtn {
             font-family: Segoeui-regular;
             text-transform: capitalize;
-            letter-spacing: 4px;
             font-size: 15px;
             border-radius: 0px;
             // margin-top: 35px;
@@ -184,7 +183,6 @@
             padding: 5px 15px;
             font-family: Segoeui-regular;
             text-transform: capitalize;
-            letter-spacing: 4px;
             font-size: 15px;
             border-radius: 0px;
             // margin-top: 35px;
